# verificxx

./: CMakeLists.txt  README.md  main.cpp
include/: ErrorMessages.h  IVerify.h  Regexes.h  RulesUtils.h  SchemaManager.h  StringFixedRules.h  Utils.h  Verificxx.h
include/constants/: ExecutionErrorMessages.h  ValidationsErrorMessages.h
include/models/: ColumnSchemaModel.h  ValidationResultModel.h
src/: Verify.cpp
src/adapter/: JsonUtils.cpp  JsonUtils.h
src/services/: SchemaManager.cpp
src/services/rules/: StringFixedRules.cpp  StringsFixedRules.cpp
tests/: test_bulk_load_methods.cpp  test_strings_fixed_rules.cpp  test_verificxx_schema_execution.cpp  test_verificxx_strings_fixed_rules.cpp
tests/data/: data.json
